added react query + saparated weatherdisplay component + limit favorites to 5 cities

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.0",
+    "@tanstack/query-sync-storage-persister": "^5.66.4",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-persist-client": "^5.66.9",
     "axios": "^1.7.9",
     "openmeteo": "^1.1.4",
     "react": "^18.3.1",
